--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,12 @@ android {
         applicationId "com.app.memoeslink.adivinador"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 95
-        versionName "1.3.1"
+        versionCode 96
+        versionName "1.3.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         setProperty("archivesBaseName", "Adivinador-$versionName")
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
     aaptOptions {
         cruncherEnabled = false
@@ -42,7 +43,7 @@ dependencies {
     })
     implementation 'org.apache.commons:commons-lang3:3.8.1'
     implementation 'com.takisoft.fix:preference-v7:28.0.0.0'
-    implementation 'com.github.jinatonic.confetti:confetti:1.1.1'
+    implementation 'com.github.jinatonic.confetti:confetti:1.1.2'
     implementation 'com.wdullaer:materialdatetimepicker:3.6.3'
     implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
     implementation 'org.sufficientlysecure:donations:2.6'
@@ -56,6 +57,7 @@ dependencies {
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'com.android.support:support-vector-drawable:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.google.android.gms:play-services-ads:17.1.2'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.android.gms:play-services-ads:17.2.0'
     testImplementation 'junit:junit:4.12'
 }
