--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 29
+    buildToolsVersion '29.0.3'
     defaultConfig {
         applicationId "com.app.memoeslink.adivinador"
         minSdkVersion 19
-        targetSdkVersion 28
-        versionCode 101
-        versionName "1.3.7"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        targetSdkVersion 29
+        versionCode 103
+        versionName "1.4.1"
+        resConfigs("es", "en")
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         setProperty("archivesBaseName", "Adivinador-$versionName")
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
@@ -37,27 +38,27 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation files('libs/easyandroidanimationslibrary-v0.5.jar')
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'org.apache.commons:commons-lang3:3.8.1'
-    implementation 'com.takisoft.fix:preference-v7:28.0.0.0'
+    implementation group: 'io.github.encryptorcode', name: 'pluralize', version: '1.0.0'
+    implementation 'org.apache.commons:commons-text:1.8'
+    implementation 'com.takisoft.preferencex:preferencex:1.1.0'
     implementation 'com.github.jinatonic.confetti:confetti:1.1.2'
-    implementation 'com.wdullaer:materialdatetimepicker:3.6.3'
-    implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
+    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
+    implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
     implementation 'org.sufficientlysecure:donations:2.6'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:customtabs:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.support:support-v13:28.0.0'
-    implementation 'com.android.support:support-annotations:28.0.0'
-    implementation 'com.android.support:support-vector-drawable:28.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.google.android.gms:play-services-ads:17.2.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.browser:browser:1.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
+    implementation 'androidx.annotation:annotation:1.1.´0'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.google.android.gms:play-services-ads:19.1.0'
     testImplementation 'junit:junit:4.12'
 }
