* Major code refactoring. * Some minor bugs were fixed. * Added compatibility for Android R devices.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion '29.0.3'
+    compileSdkVersion 'android-R'
+    buildToolsVersion '30.0.0 rc3'
     defaultConfig {
         applicationId "com.app.memoeslink.adivinador"
         minSdkVersion 19
-        targetSdkVersion 29
-        versionCode 105
-        versionName "1.5.0"
+        targetSdkVersion 30
+        versionCode 106
+        versionName "1.5.1"
         resConfigs("es", "en")
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         setProperty("archivesBaseName", "Adivinador-$versionName")
