--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion '30.0.0 rc3'
+    buildToolsVersion '30.0.3'
     defaultConfig {
         applicationId "com.app.memoeslink.adivinador"
         minSdkVersion 19
         targetSdkVersion 30
-        versionCode 106
-        versionName "1.5.1"
+        versionCode 107
+        versionName "1.5.2"
         resConfigs("es", "en")
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         setProperty("archivesBaseName", "Adivinador-$versionName")
@@ -67,15 +67,15 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'net.danlew:android.joda:2.10.6.1'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
-    implementation 'androidx.annotation:annotation:1.1.´0'
+    implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'com.google.android.gms:play-services-ads:19.6.0'
+    implementation 'com.google.android.gms:play-services-ads:20.1.0'
     testImplementation 'junit:junit:4.13.1'
 }
