Performed major code refactoring: - Changed some Java classes to Kotlin classes. - Created libraries from previous code. - Updated dependencies. - Modified or moved class methods. - Fixed indentation and spacing in code. - Removed unused files. - Reworked name generation.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,22 +1,20 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion '30.0.3'
     defaultConfig {
         applicationId "com.app.memoeslink.adivinador"
-        minSdkVersion 19
-        targetSdkVersion 30
-        versionCode 107
-        versionName "1.5.2"
-        resConfigs("es", "en")
+        minSdkVersion 26
+        targetSdkVersion 31
+        versionCode 108
+        versionName "1.6.0"
+        resConfigs 'es', 'en'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         setProperty("archivesBaseName", "Adivinador-$versionName")
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
-    }
-    aaptOptions {
-        cruncherEnabled = false
     }
     buildTypes {
         release {
@@ -25,26 +23,21 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    configurations.all {
-        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
-    }
-    lintOptions {
-        disable 'MissingTranslation'
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     packagingOptions {
-        pickFirst 'draftv3/schema'
-        pickFirst 'draftv4/schema'
-        exclude 'META-INF/DEPENDENCIES'
-        exclude 'META-INF/INDEX.LIST'
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/license.txt'
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/notice.txt'
+        resources {
+            excludes += ['META-INF/DEPENDENCIES', 'META-INF/INDEX.LIST', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/license.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt', 'META-INF/notice.txt']
+            pickFirsts += ['draftv3/schema', 'draftv4/schema']
+        }
+    }
+    lint {
+        disable 'MissingTranslation'
+    }
+    configurations.all {
+        resolutionStrategy.force 'androidx.core:core-ktx:1.6.0'
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
 }
 
@@ -53,29 +46,34 @@ dependencies {
     androidTestImplementation('androidx.test.espresso:espresso-core:3.3.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'org.apache.commons:commons-text:1.8'
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.11.2'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.2'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.2'
-    implementation 'com.networknt:json-schema-validator:1.0.43'
-    implementation 'io.github.encryptorcode:pluralize:1.0.0'
+    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
+    implementation 'com.github.memoeslink.android-generator:release:2022.0.2'
+    implementation 'com.github.memoeslink.sharedpreferences-helper:final:2022.0.0'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.12.4'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.4'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'
+    implementation 'com.networknt:json-schema-validator:1.0.66'
     implementation 'com.takisoft.preferencex:preferencex:1.1.0'
     implementation 'com.github.jinatonic.confetti:confetti:1.1.2'
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
     implementation 'org.sufficientlysecure:donations:2.6'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'net.danlew:android.joda:2.10.6.1'
-    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'androidx.browser:browser:1.3.0'
+    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.browser:browser:1.4.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
-    implementation 'androidx.annotation:annotation:1.2.0'
+    implementation 'androidx.annotation:annotation:1.3.0'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'com.google.android.gms:play-services-ads:20.1.0'
-    testImplementation 'junit:junit:4.13.1'
+    implementation 'com.google.android.gms:play-services-ads:20.5.0'
+    testImplementation 'junit:junit:4.13.2'
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
