--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     implementation 'com.github.jinatonic.confetti:confetti:1.1.2'
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
-    implementation 'org.sufficientlysecure:donations:2.6'
+    implementation 'com.github.moisoni97:google-inapp-billing:1.0.5'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -73,6 +73,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 }
 repositories {
     mavenCentral()
