--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.app.memoeslink.adivinador"
         minSdkVersion 26
         targetSdkVersion 31
-        versionCode 109
-        versionName "1.6.1"
+        versionCode 110
+        versionName "1.6.2"
         resConfigs 'es', 'en'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         setProperty("archivesBaseName", "Adivinador-$versionName")
@@ -47,8 +47,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
-    implementation 'com.github.memoeslink.android-generator:release:2022.0.4'
+    implementation 'com.github.memoeslink.android-generator:release:2022.0.6'
     implementation 'com.github.memoeslink.sharedpreferences-helper:final:2022.0.0'
+    implementation 'io.github.memoeslink:randomizer:2021.0.0-release'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.12.4'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.4'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'
