--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,11 @@ Thumbs.db
 # Android Studio
 *.iml
 .idea
-#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
 .gradle
-build/
+/build
+/captures
+.cxx
 .navigation
-captures/
 output.json
 
 # NDK
