--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
-    implementation 'com.github.memoeslink.android-generator:release:2022.1.7'
+    implementation 'com.github.memoeslink.android-generator:release:2022.1.10'
     implementation 'com.github.memoeslink.sharedpreferences-helper:final:2022.0.1'
     implementation 'io.github.memoeslink:randomizer:2021.0.0-release'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.12.4'
@@ -59,11 +59,12 @@ dependencies {
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
     implementation 'com.github.moisoni97:google-inapp-billing:1.0.5'
-    implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.browser:browser:1.4.0'
+    implementation 'androidx.emoji2:emoji2:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
     implementation 'androidx.annotation:annotation:1.3.0'
