--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
     lint {
         disable 'MissingTranslation'
     }
+    namespace 'com.app.memoeslink.adivinador'
     configurations.all {
         resolutionStrategy.force 'androidx.core:core-ktx:1.6.0'
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
