Refactored code, which includes: * Splitting the information shown in the prediction, displaying only the fortune-telling part. The personal information is pending for implementation in Identity.java. * Added sign getters in ZodiacSign.java and WalterBergZodiacSign.java. * PreferenceHandler.java relying more on SharedPreferencesHelper.java. * Adding PreferenceUtils.java to manage all the preferences in the app. * Replaced StickyScrollView.java. * Removed Device.java from the android-generator dependency and moving it to a brand new one. Replaced old .PNG icons. Removed old .XML files.

--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,12 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        jcenter()
+        maven { url "https://maven.google.com" }
+        maven { url 'https://jitpack.io' }
+        //jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.1'
+        classpath 'com.android.tools.build:gradle:8.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -22,7 +24,7 @@ allprojects {
         mavenCentral()
         maven { url "https://maven.google.com" }
         maven { url 'https://jitpack.io' }
-        jcenter()
+        //jcenter()
     }
 }
 
