--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,14 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 33
-    buildToolsVersion '33.0.0'
+    buildToolsVersion '30.0.3'
     defaultConfig {
         applicationId "com.app.memoeslink.adivinador"
         minSdkVersion 26
         targetSdkVersion 33
-        versionCode 118
-        versionName "1.8.0"
-        resConfigs 'es', 'en'
+        versionCode 119
+        versionName "1.9.0"
+        resourceConfigurations += ['es', 'en']
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         setProperty("archivesBaseName", "Adivinador-$versionName")
         vectorDrawables.useSupportLibrary = true
@@ -25,6 +25,9 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
+    }
+    kotlinOptions {
+        jvmTarget = '11'
     }
     packagingOptions {
         resources {
@@ -42,36 +45,45 @@ android {
     }
 }
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(11))
+    }
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.lifecycle:lifecycle-process:2.6.1'
     androidTestImplementation('androidx.test.espresso:espresso-core:3.5.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
-    implementation 'com.github.memoeslink.android-generator:release:2023.0.4'
-    implementation 'com.github.memoeslink.sharedpreferences-helper:final:2022.1.2'
+    implementation 'com.github.memoeslink.android-generator:release:2023.0.9'
+    implementation 'com.github.memoeslink.sharedpreferences-helper:final:2023.0.1'
+    implementation 'com.github.memoeslink.device:release:2023.0.0'
     implementation 'io.github.memoeslink:randomizer:2022.0.1-release'
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.1'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.1'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
-    implementation 'com.networknt:json-schema-validator:1.0.76'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+    implementation 'com.networknt:json-schema-validator:1.0.77'
     implementation 'com.takisoft.preferencex:preferencex:1.1.0'
+    implementation 'com.github.amarjain07:StickyScrollView:1.0.3'
     implementation 'com.github.jinatonic.confetti:confetti:1.1.2'
-    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
+    implementation 'com.github.lelloman:android-identicons:v11'
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
     implementation 'com.github.moisoni97:google-inapp-billing:1.1.1'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0'
     implementation 'androidx.browser:browser:1.5.0'
     implementation 'androidx.emoji2:emoji2:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
-    implementation 'androidx.annotation:annotation:1.5.0'
+    implementation 'androidx.annotation:annotation:1.6.0'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.google.android.gms:play-services-ads:21.5.0'
     implementation 'androidx.core:core-ktx:1.9.0'
