Changed build.gradle. Changed proguard-rules.pro.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
+plugins {
+    id('com.android.application')
+    id('kotlin-android')
+}
 
 android {
     compileSdkVersion 33
@@ -68,7 +70,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
-    implementation 'com.networknt:json-schema-validator:1.0.79'
+    implementation 'com.networknt:json-schema-validator:1.0.80'
     implementation 'com.takisoft.preferencex:preferencex:1.1.0'
     implementation 'com.github.amarjain07:StickyScrollView:1.0.3'
     implementation 'com.github.jinatonic.confetti:confetti:1.1.2'
