--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
         tools:replace="android:allowBackup">
         <activity
-            android:name=".activity.TempMainActivity"
+            android:name=".activity.MainActivity"
             android:configChanges="orientation|screenSize"
             android:exported="true"
             android:windowSoftInputMode="adjustNothing">
