--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,16 @@
     <application
         android:name="com.app.memoeslink.adivinador.BaseApplication"
         android:allowBackup="false"
-        android:fullBackupOnly="false"
-        android:icon="@drawable/ic_launcher"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="false"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:requestLegacyExternalStorage="true"
+        android:preserveLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+        tools:ignore="UnusedAttribute"
         tools:replace="android:allowBackup">
+
         <activity
             android:name=".activity.MainActivity"
             android:configChanges="orientation|screenSize"
