Changed build.gradle. Refactored code.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,13 +5,13 @@ plugins {
 
 android {
     compileSdkVersion 33
-    buildToolsVersion '30.0.3'
+    buildToolsVersion '33.0.1'
     defaultConfig {
         applicationId "com.app.memoeslink.adivinador"
         minSdkVersion 26
         targetSdkVersion 33
-        versionCode 125
-        versionName "1.9.6"
+        versionCode 126
+        versionName "1.9.7"
         resourceConfigurations += ['es', 'en']
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         setProperty("archivesBaseName", "Adivinador-$versionName")
@@ -59,6 +59,7 @@ java {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.lifecycle:lifecycle-process:2.6.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation('androidx.test.espresso:espresso-core:3.5.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
