--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,11 @@ buildscript {
         google()
         mavenCentral()
         maven { url "https://maven.google.com" }
-        maven { url 'https://jitpack.io' }
+        maven { url "https://jitpack.io" }
         //jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.0.2'
+        classpath "com.android.tools.build:gradle:8.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -23,7 +23,7 @@ allprojects {
         google()
         mavenCentral()
         maven { url "https://maven.google.com" }
-        maven { url 'https://jitpack.io' }
+        maven { url "https://jitpack.io" }
         //jcenter()
     }
 }
