--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion '33.0.1'
+    compileSdk 34
+    buildToolsVersion '34.0.0'
     defaultConfig {
         applicationId "com.app.memoeslink.adivinador"
         minSdkVersion 26
-        targetSdkVersion 33
+        targetSdk 34
         versionCode 128
         versionName "1.9.9"
         resourceConfigurations += ['es', 'en']
