--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.8.0'
+    ext.kotlin_version = '1.8.22'
     repositories {
         google()
         mavenCentral()
@@ -25,6 +25,9 @@ allprojects {
         maven { url "https://maven.google.com" }
         maven { url "https://jitpack.io" }
         //jcenter()
+    }
+    tasks.withType(JavaCompile) {
+        //options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
     }
 }
 
