--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 26
         targetSdk 34
         versionCode 136
-        versionName "1.9.17"
+        versionName "1.10.0"
         resourceConfigurations += ['es', 'en']
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         setProperty("archivesBaseName", "Adivinador-$versionName")
@@ -63,10 +63,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
-    implementation 'com.github.memoeslink.android-generator:release:2023.2.13'
+    implementation 'com.github.memoeslink.android-generator:release:2023.2.15'
     implementation 'com.github.memoeslink.sharedpreferences-helper:final:2023.0.4'
     implementation 'com.github.memoeslink.device:release:2023.0.4'
-    implementation 'io.github.memoeslink:randomizer:2023.1.4-release'
+    implementation 'io.github.memoeslink:randomizer:2023.1.5'
     implementation 'io.github.memoeslink:helper:1.1.4'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
