--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,4 @@ android.nonTransitiveRClass=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonFinalResIds=false
 android.suppressUnsupportedCompileSdk=34
+org.gradle.configuration-cache=true
