--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ plugins {
 
 android {
     compileSdk 34
-    buildToolsVersion '34.0.0'
     defaultConfig {
         applicationId "com.app.memoeslink.adivinador"
         minSdkVersion 26
@@ -28,11 +27,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_19
-        targetCompatibility JavaVersion.VERSION_19
+        sourceCompatibility JavaVersion.VERSION_20
+        targetCompatibility JavaVersion.VERSION_20
     }
     kotlinOptions {
-        jvmTarget = '19'
+        jvmTarget = '20'
     }
     packagingOptions {
         resources {
@@ -44,7 +43,10 @@ android {
         disable 'MissingTranslation'
     }
     namespace 'com.app.memoeslink.adivinador'
-    configurations.all {
+    buildFeatures {
+        buildConfig true
+    }
+    configurations.configureEach {
         resolutionStrategy.force 'androidx.core:core-ktx:1.9.0'
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
@@ -52,48 +54,48 @@ android {
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(19))
+        languageVersion.set(JavaLanguageVersion.of(20))
     }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.annotation:annotation:1.7.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.browser:browser:1.8.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.emoji2:emoji2:1.4.0'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-process:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.0'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+    implementation 'com.github.amarjain07:StickyScrollView:1.0.3'
+    implementation 'com.github.jinatonic.confetti:confetti:1.1.2'
+    implementation 'com.github.lelloman:android-identicons:v11'
+    implementation 'com.github.memoeslink.android-generator:release:2023.3.10'
+    implementation 'com.github.memoeslink.device:release:2023.0.5'
+    implementation 'com.github.memoeslink.sharedpreferences-helper:final:2023.0.5'
+    implementation 'com.github.moisoni97:google-inapp-billing:1.1.1'
+    implementation 'com.google.android.gms:play-services-ads:23.0.0'
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
+    implementation 'com.networknt:json-schema-validator:1.4.0'
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
+    implementation 'io.github.memoeslink:helper:1.1.6'
+    implementation 'io.github.memoeslink:randomizer:2023.1.5'
+    implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation('androidx.test.espresso:espresso-core:3.5.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
-    implementation 'com.github.memoeslink.android-generator:release:2023.3.8'
-    implementation 'com.github.memoeslink.sharedpreferences-helper:final:2023.0.5'
-    implementation 'com.github.memoeslink.device:release:2023.0.5'
-    implementation 'io.github.memoeslink:randomizer:2023.1.5'
-    implementation 'io.github.memoeslink:helper:1.1.4'
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.3'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.3'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
-    implementation 'com.networknt:json-schema-validator:1.0.87'
-    implementation 'com.takisoft.preferencex:preferencex:1.1.0'
-    implementation 'com.github.amarjain07:StickyScrollView:1.0.3'
-    implementation 'com.github.jinatonic.confetti:confetti:1.1.2'
-    implementation 'com.github.lelloman:android-identicons:v11'
-    implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
-    implementation 'com.github.moisoni97:google-inapp-billing:1.1.1'
-    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
-    implementation 'com.google.code.gson:gson:2.10.1'
-    implementation 'com.google.android.material:material:1.10.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.lifecycle:lifecycle-process:2.6.2'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
-    implementation 'androidx.browser:browser:1.6.0'
-    implementation 'androidx.emoji2:emoji2:1.4.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
-    implementation 'androidx.annotation:annotation:1.7.0'
-    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'com.google.android.gms:play-services-ads:22.5.0'
-    implementation 'androidx.core:core-ktx:1.12.0'
-    testImplementation 'junit:junit:4.13.2'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
 }
