--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,12 @@
 
     <application
         android:name="com.app.memoeslink.adivinador.BaseApplication"
-        android:allowBackup="false"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:preserveLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
-        tools:ignore="UnusedAttribute"
-        tools:replace="android:allowBackup">
+        tools:ignore="UnusedAttribute">
 
         <activity
             android:name=".activity.MainActivity"
